# wifi-login

./: .gitignore  LICENSE  README.md  data.py  flet_page.py  main.py  pyproject.toml  setup.py  view.py
assets/: AppIcon.icns
